After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696856 - unbreak build due to missing NULL definition
unbreak build due to missing NULL definition
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: plugins
3.8.x
Other OpenBSD
: Normal major
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2013-03-29 14:35 UTC by Antoine Jacoutot
Modified: 2013-04-01 19:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
include stdlib.h (721 bytes, patch)
2013-03-29 14:35 UTC, Antoine Jacoutot
accepted-commit_now Details | Review

Description Antoine Jacoutot 2013-03-29 14:35:39 UTC
Created attachment 240122 [details] [review]
include stdlib.h

Hi.

Minor patch to fix the following error on at least OpenBSD:
error: 'NULL' undeclared (first use in this function)

Would that be alright to commit?
Comment 1 Matthias Clasen 2013-03-30 23:55:22 UTC
Review of attachment 240122 [details] [review]:

Looks fine to me