Add missing include for NULL.

To prevent the following error on some OS:
error: 'NULL' undeclared (first use in this function)

https://bugzilla.gnome.org/show_bug.cgi?id=696856